rerunning analyzer resolves some problems, 18 failing